--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node-red-contrib-ocpp",
+  "name": "etraid_node-red-contrib-ocpp",
   "version": "1.2.0",
   "description": "A set of nodes to communicate via OCPP to a compatible charge box or central system",
   "main": "ocpp-req.js",
